refactor cors setup

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --no-warnings index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"No test specified\" && exit 1",
     "start": "node index.js"
   },
